--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Essentialism | Do Less. Be More.</title>
+    <title>Essentialism | Leadership Team</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -31,54 +31,41 @@
     </section>
     <section class="artists-container">
         <div class="artist">
-            <img src=""/>
+            <img src="assets/Tommy Kindle.jpg"/>
                 <div class="title">Tommy Kindle</div>
            <div class = "bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nemo modi dolorem tenetur mollitia voluptate, veritatis iusto vero quis minima nulla maiores quidem. Eligendi molestias illum aut ipsa. Repudiandae, expedita!</div>
     </div>
 
     <div class="artist">
-        <img src=""/>
+        <img src="assets/Adonis Puente.png"/>
             <div class="title">Adonis Puente</div>
         <div class = "bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam animi voluptate modi, sed, aliquid eius tenetur dicta assumenda rerum sequi doloremque, ullam perspiciatis illum soluta! Beatae, atque. Suscipit, assumenda numquam!</div>
     </div>
     </section>
     <section class="artists-container">
         <div class="artist">
-            <img src=""/>
+            <img src="assets/William Bell.jpg"/>
                 <div class="title">William Bell</div>
            <div class = "bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nemo modi dolorem tenetur mollitia voluptate, veritatis iusto vero quis minima nulla maiores quidem. Eligendi molestias illum aut ipsa. Repudiandae, expedita!</div>
     </div>
 
     <div class="artist">
-        <img src=""/>
+        <img src="assets/Henry Nelson.jpg"/>
             <div class="title">Henry Nelson</div>
         <div class = "bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam animi voluptate modi, sed, aliquid eius tenetur dicta assumenda rerum sequi doloremque, ullam perspiciatis illum soluta! Beatae, atque. Suscipit, assumenda numquam!</div>
     </div>
     </section>
     <section class="artists-container">
         <div class="artist">
-            <img src=""/>
+            <img src="assets/David Temple.jpg"/>
                 <div class="title">David Temple</div>
            <div class = "bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nemo modi dolorem tenetur mollitia voluptate, veritatis iusto vero quis minima nulla maiores quidem. Eligendi molestias illum aut ipsa. Repudiandae, expedita!</div>
     </div>
 
     <div class="artist">
-        <img src=""/>
-            <div class="title">Be More.</div>
-        <div class = "bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam animi voluptate modi, sed, aliquid eius tenetur dicta assumenda rerum sequi doloremque, ullam perspiciatis illum soluta! Beatae, atque. Suscipit, assumenda numquam!</div>
-    </div>
-    </section>
-    <section class="artists-container">
-        <div class="artist">
-            <img src=""/>
-                <div class="title">Do Less.</div>
-           <div class = "bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nemo modi dolorem tenetur mollitia voluptate, veritatis iusto vero quis minima nulla maiores quidem. Eligendi molestias illum aut ipsa. Repudiandae, expedita!</div>
-    </div>
-
-    <div class="artist">
-        <img src=""/>
-            <div class="title">Be More.</div>
-        <div class = "bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam animi voluptate modi, sed, aliquid eius tenetur dicta assumenda rerum sequi doloremque, ullam perspiciatis illum soluta! Beatae, atque. Suscipit, assumenda numquam!</div>
+        <img src="assets/You.jpg"/>
+            <div class="title">You?</div>
+        <div class = "bio">We're always looking for amazing people to join our small but mighty & growing team. If you think you have what it takes, reach out to careers@essentialism.com today!</div>
     </div>
     </section>
     <script src="index.js"></script>
