added footers, updated team page with github handles, emails, pics

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?selection.family=Raleway" attr>
+    <script src="https://kit.fontawesome.com/ecf13fe1cd.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -81,6 +82,17 @@
         <div class = "bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam animi voluptate modi, sed, aliquid eius tenetur dicta assumenda rerum sequi doloremque, ullam perspiciatis illum soluta! Beatae, atque. Suscipit, assumenda numquam!</div>
     </div>
     </section>
+    <footer class="footer">
+        <div class="footerParent">
+        <div class ="foot">
+            <div class="footerUL">
+                <div>Essentialism | Do Less. Be More.</div>
+                <div>Made with &hearts; in Fayetteville, AR</div>
+                <div>Copyright &copy; 2020</div> 
+            </div>    
+        </div>
+    </div>
+</footer>
     <script src="index.js"></script>
 </body>
 </html>
