--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?selection.family=Raleway" attr>
+    <script src="https://kit.fontawesome.com/ecf13fe1cd.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -32,33 +33,7 @@
     <section class="artists-container">
         <div class="artist">
             <img src=""/>
-                <div class="title">Tommy Kindle</div>
-           <div class = "bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nemo modi dolorem tenetur mollitia voluptate, veritatis iusto vero quis minima nulla maiores quidem. Eligendi molestias illum aut ipsa. Repudiandae, expedita!</div>
-    </div>
-
-    <div class="artist">
-        <img src=""/>
-            <div class="title">Adonis Puente</div>
-        <div class = "bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam animi voluptate modi, sed, aliquid eius tenetur dicta assumenda rerum sequi doloremque, ullam perspiciatis illum soluta! Beatae, atque. Suscipit, assumenda numquam!</div>
-    </div>
-    </section>
-    <section class="artists-container">
-        <div class="artist">
-            <img src=""/>
-                <div class="title">William Bell</div>
-           <div class = "bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nemo modi dolorem tenetur mollitia voluptate, veritatis iusto vero quis minima nulla maiores quidem. Eligendi molestias illum aut ipsa. Repudiandae, expedita!</div>
-    </div>
-
-    <div class="artist">
-        <img src=""/>
-            <div class="title">Henry Nelson</div>
-        <div class = "bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam animi voluptate modi, sed, aliquid eius tenetur dicta assumenda rerum sequi doloremque, ullam perspiciatis illum soluta! Beatae, atque. Suscipit, assumenda numquam!</div>
-    </div>
-    </section>
-    <section class="artists-container">
-        <div class="artist">
-            <img src=""/>
-                <div class="title">David Temple</div>
+                <div class="title">Do Less.</div>
            <div class = "bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nemo modi dolorem tenetur mollitia voluptate, veritatis iusto vero quis minima nulla maiores quidem. Eligendi molestias illum aut ipsa. Repudiandae, expedita!</div>
     </div>
 
@@ -81,6 +56,43 @@
         <div class = "bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam animi voluptate modi, sed, aliquid eius tenetur dicta assumenda rerum sequi doloremque, ullam perspiciatis illum soluta! Beatae, atque. Suscipit, assumenda numquam!</div>
     </div>
     </section>
+    <section class="artists-container">
+        <div class="artist">
+            <img src=""/>
+                <div class="title">Do Less.</div>
+           <div class = "bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nemo modi dolorem tenetur mollitia voluptate, veritatis iusto vero quis minima nulla maiores quidem. Eligendi molestias illum aut ipsa. Repudiandae, expedita!</div>
+    </div>
+
+    <div class="artist">
+        <img src=""/>
+            <div class="title">Be More.</div>
+        <div class = "bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam animi voluptate modi, sed, aliquid eius tenetur dicta assumenda rerum sequi doloremque, ullam perspiciatis illum soluta! Beatae, atque. Suscipit, assumenda numquam!</div>
+    </div>
+    </section>
+    <section class="artists-container">
+        <div class="artist">
+            <img src=""/>
+                <div class="title">Do Less.</div>
+           <div class = "bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nemo modi dolorem tenetur mollitia voluptate, veritatis iusto vero quis minima nulla maiores quidem. Eligendi molestias illum aut ipsa. Repudiandae, expedita!</div>
+    </div>
+
+    <div class="artist">
+        <img src=""/>
+            <div class="title">Be More.</div>
+        <div class = "bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam animi voluptate modi, sed, aliquid eius tenetur dicta assumenda rerum sequi doloremque, ullam perspiciatis illum soluta! Beatae, atque. Suscipit, assumenda numquam!</div>
+    </div>
+    </section>
+    <footer class="footer">
+        <div class="footerParent">
+        <div class ="foot">
+            <div class="footerUL">
+                <div>Essentialism | Do Less. Be More.</div>
+                <div>Made with &hearts; in Fayetteville, AR</div>
+                <div>Copyright &copy; 2020</div> 
+            </div>    
+        </div>
+    </div>
+</footer>
     <script src="index.js"></script>
 </body>
 </html>
