--- a/team.html
+++ b/team.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?selection.family=Raleway" attr>
+    <script src="https://kit.fontawesome.com/ecf13fe1cd.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -33,12 +34,16 @@
         <div class="artist">
             <img src="assets/Tommy Kindle.jpg"/>
                 <div class="title">Tommy Kindle</div>
+                <div class = "bio"><i class="fab fa-github"><a href="https://github.com/tommykindle">/tommykindle</a></i></div>
+                <div class = "bio"><i class="fas fa-envelope-square"><a href="mailto: tommy-kindle@lambdastudents.com">/email Tommy</a></i></div>
            <div class = "bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nemo modi dolorem tenetur mollitia voluptate, veritatis iusto vero quis minima nulla maiores quidem. Eligendi molestias illum aut ipsa. Repudiandae, expedita!</div>
     </div>
 
     <div class="artist">
         <img src="assets/Adonis Puente.png"/>
             <div class="title">Adonis Puente</div>
+            <div class = "bio"><i class="fab fa-github"><a href="https://github.com/adonispuente">/adonispuente</a></i></div>
+            <div class = "bio"><i class="fas fa-envelope-square"><a href="mailto: adonis-puente@lambdastudents.com">/email Adonis</a></i></div>
         <div class = "bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam animi voluptate modi, sed, aliquid eius tenetur dicta assumenda rerum sequi doloremque, ullam perspiciatis illum soluta! Beatae, atque. Suscipit, assumenda numquam!</div>
     </div>
     </section>
@@ -46,12 +51,16 @@
         <div class="artist">
             <img src="assets/William Bell.jpg"/>
                 <div class="title">William Bell</div>
+                <div class = "bio"><i class="fab fa-github"><a href="https://github.com/W-B28/">/w-b28</a></i></div>
+                <div class = "bio"><i class="fas fa-envelope-square"><a href="mailto: william-bell@lambdastudents.com">/email William</a></i></div>
            <div class = "bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nemo modi dolorem tenetur mollitia voluptate, veritatis iusto vero quis minima nulla maiores quidem. Eligendi molestias illum aut ipsa. Repudiandae, expedita!</div>
     </div>
 
     <div class="artist">
         <img src="assets/Henry Nelson.jpg"/>
             <div class="title">Henry Nelson</div>
+            <div class = "bio"><i class="fab fa-github"><a href="https://github.com/HNelson98">/hnelson98</a></i></div>
+            <div class = "bio"><i class="fas fa-envelope-square"><a href="mailto: henry-nelson@lambdastudents.com">/email Henry</a></i></div>
         <div class = "bio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam animi voluptate modi, sed, aliquid eius tenetur dicta assumenda rerum sequi doloremque, ullam perspiciatis illum soluta! Beatae, atque. Suscipit, assumenda numquam!</div>
     </div>
     </section>
@@ -59,15 +68,29 @@
         <div class="artist">
             <img src="assets/David Temple.jpg"/>
                 <div class="title">David Temple</div>
+                <div class = "bio"><i class="fab fa-github"><a href="https://github.com/dstemple7">/dstemple7</a></i></div>
+                <div class = "bio"><i class="fas fa-envelope-square"><a href="mailto: david-temple@lambdastudents.com">/email David</a></i></div>
            <div class = "bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nemo modi dolorem tenetur mollitia voluptate, veritatis iusto vero quis minima nulla maiores quidem. Eligendi molestias illum aut ipsa. Repudiandae, expedita!</div>
     </div>
 
     <div class="artist">
         <img src="assets/You.jpg"/>
-            <div class="title">You?</div>
-        <div class = "bio">We're always looking for amazing people to join our small but mighty & growing team. If you think you have what it takes, reach out to careers@essentialism.com today!</div>
+            <div class="title">You Got What it Takes?</div>
+            <div class = "bio"><i class="fas fa-envelope-square"><a href="mailto: careers@essentialism.com">/email Careers</a></i></div>
+        <div class = "bio">We're always looking for amazing people to join our small but mighty & growing team. If you think you have what it takes, reach out to <a href="mailto: careers@essentialism.com">careers@essentialism.com</a> today!</div>
     </div>
     </section>
+    <footer class="footer">
+        <div class="footerParent">
+        <div class ="foot">
+            <div class="footerUL">
+                <div>Essentialism | Do Less. Be More.</div>
+                <div>Made with &hearts; in Fayetteville, AR</div>
+                <div>Copyright &copy; 2020</div> 
+            </div>    
+        </div>
+    </div>
+</footer>
     <script src="index.js"></script>
 </body>
 </html>
